<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:hint="@string/big_title"
            android:textSize="24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/hp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/item_context"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left|top"
            android:hint="@string/context"
            android:inputType="textMultiLine"
            android:minLines="6" />
    </LinearLayout>

</FrameLayout>
